--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-gray-100 font-sans p-4">
   <div class="max-w-4xl mx-auto">
-    <h1 class="text-3xl font-bold text-center mb-4">Monitor de Datos del ESP32</h1>
+    <h1 class="text-3xl font-bold text-center mb-4">Monitoreo de la pulsera</h1>
 
     <div class="flex justify-center mb-6">
       <button id="connectBtn" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Conectar vía Bluetooth</button>
