--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Monitoreo de la pulsera</title>
+  <title>Monitoreo del dispositivo</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 font-sans p-4">
   <div class="max-w-4xl mx-auto">
-    <h1 class="text-3xl font-bold text-center mb-4">Monitoreo de la pulsera</h1>
+    <h1 class="text-3xl font-bold text-center mb-4">Monitoreo del dispositivo</h1>
 
     <div class="flex justify-center mb-6">
       <button id="connectBtn" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Conectar vía Bluetooth</button>
