--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
         <canvas id="chartAccel" class="h-40"></canvas>
         <p id="textAccel" class="text-center mt-2 font-medium"></p>
       </div>
+      <div class="flex justify-center mt-6">
+        <button onclick="descargarDatos()" class="bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">Descargar Datos</button>
+      </div>
     </div>
   </div>
 
@@ -66,6 +69,25 @@
         tension: 0.2
       }]
     });
+    
+    const datosRecibidos = [];
+    function guardarDato(texto) {
+      const ahora = new Date();
+      const linea = `[${ahora.toLocaleDateString()} ${ahora.toLocaleTimeString()}] ${texto}`;
+      datosRecibidos.push(linea);
+    }
+    function descargarDatos() {
+      const contenido = datosRecibidos.join('\n');
+      const blob = new Blob([contenido], { type: 'text/plain' });
+      const url = URL.createObjectURL(blob);
+      
+      const a = document.createElement('a');
+      a.href = url;
+      a.download = 'datos.txt';
+      a.click();
+      URL.revokeObjectURL(url);
+    }
+
 
     const bpmChart = new Chart(document.getElementById('chartBPM'), {
       type: 'line', data: chartData('Ritmo Cardíaco (BPM)', 'red'), options: { scales: { x: { display: false } } }
@@ -153,6 +175,7 @@ function updateChart(chart, value) {
         const edaValue = data.match(/,([0-9\.]+)uS/);
         const rollMatch = data.match(/Roll:([\-\d\.]+)/);
         const pitchMatch = data.match(/Pitch:([\-\d\.]+)/);
+        guardarDato(data); 
 
 
         if (bpmMatch) {
